<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/eventScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    xmlns:tools="http://schemas.android.com/tools">
    <Button
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_event"
        app:layout_constraintTop_toBottomOf="@id/timeText" />
    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:text="@string/add_events"
        android:onClick="addEvent"
        app:layout_constraintBottom_toTopOf="@+id/view"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:text="@string/view_events"
        android:onClick="viewEvents"
        app:layout_constraintTop_toBottomOf="@id/add"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="136dp" />

    <Button
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_marginTop="9dp"
        android:text="@string/update_events"
        android:onClick="updateEvents"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:onClick="deleteEvents"
        android:text="@string/delete_events"
        app:layout_constraintTop_toBottomOf="@id/update" />

    <EditText
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_title_for_the_event"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add" />
    <EditText
        android:id="@+id/descText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:inputType="text"
        android:hint="@string/enter_a_short_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <EditText
        android:id="@+id/timeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:inputType="text"
        android:hint="@string/enter_the_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descText" />

    <EditText
        android:id="@+id/idText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:inputType="text"
        android:hint="@string/enter_the_current_event_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeText" />
    <TextView
        android:id="@+id/tableContents"
        android:layout_width="410dp"
        android:layout_height="251dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/add" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/back_to_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableContents" />

    <Button
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idText" />

    <Button
        android:id="@+id/sortAsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Sort by title (Ascending)"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />
    <Button
        android:id="@+id/sortDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Sort by title (Descending)"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortAsc" />

</androidx.constraintlayout.widget.ConstraintLayout>



